--- a/_includes/_scripts/vendors.html
+++ b/_includes/_scripts/vendors.html
@@ -7,8 +7,7 @@
 </script>
 
 {% assign js_vendors = '' %}
-{% assign js_vendors = js_vendors | append: ', ' | append: 'jquery: jquery/index.js?v=2.1.3' %}
-{% assign js_vendors = js_vendors | append: ', ' | append: 'fastclick: fastclick/lib/fastclick.min.js?v=1.0.6' %}
+{% assign js_vendors = js_vendors | append: ', ' | append: 'jquery: jquery/jquery-3.7.1.min.js?v=3.7.1' | append: ', jquery-migrate: jquery/jquery-migrate-3.4.1.min.js' %}
 {% assign js_vendors = js_vendors | append: ', ' | append: 'lazyload: jquery_lazyload/jquery.lazyload.js?v=1.9.7' %}
 {% assign js_vendors = js_vendors | append: ', ' | append: 'velocity: velocity/velocity.min.js?v=1.2.1' %}
 {% assign js_vendors = js_vendors | append: ', ' | append: 'velocity_ui: velocity/velocity.ui.min.js?v=1.2.1' %}
